tests/expectations/compiler/function/annotated_function_fail.out
DCE_ENABLED:
Error [ETYC0372027]: Unknown annotation: `@test`.
    --> compiler-test:3:5
     |
   3 |     @test
     |     ^^^^^
Error [ETYC0372027]: Unknown annotation: `@program`.
    --> compiler-test:8:5
     |
   8 |     @program
     |     ^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372027]: Unknown annotation: `@test`.
    --> compiler-test:3:5
     |
   3 |     @test
     |     ^^^^^
Error [ETYC0372027]: Unknown annotation: `@program`.
    --> compiler-test:8:5
     |
   8 |     @program
     |     ^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^
